src/tests/ci/assignment_6_advanced_features/valid/01_basic.c
#include <stdio.h>

typedef int MyInt;

int main() {
    MyInt x = 42;
    printf("%d\n", x);
    return 0;
}