src/tests/ci/assignment_6_advanced_features/invalid_semantic/02_double.c
#include <stdio.h>

typedef int MyInt;

typedef int MyInt;

int main() {
    MyInt x = 5;
    return 0;
}